--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/material": "^5.11.11",
+		"@types/node": "18.14.4",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"bcryptjs": "^2.4.3",
+		"eslint": "8.35.0",
+		"eslint-config-next": "13.2.3",
+		"mongodb": "^5.1.0",
 		"next": "13.2.3",
+		"next-auth": "^3.4.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"bcryptjs": "^2.4.3",
-		"mongodb": "^5.1.0",
-		"next-auth": "^3.4.2"
+		"typescript": "4.9.5"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2"
 	}
 }
