--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
-		"@mui/material": "^5.11.11",
+		"@material-ui/core": "^4.12.4",
 		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.11",
 		"@types/node": "18.14.4",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
