--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"next-auth": "^3.4.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-responsive": "^9.0.2",
 		"typescript": "4.9.5"
 	},
 	"devDependencies": {
